src/objects/EU001_RI__c.object
<CustomObject>
    <description>Contiene los datos necesarios de la RI para su asociacion con los Compromisos</description>
    <fields>
        <fullName>Apoyos_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Apoyos basados en compromisos asociados al RI</description>
        <label>Apoyos</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Reunión Individual</relationshipLabel>
        <relationshipName>Reuni_n_Individual_RI_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EG001_Valoracion_de_RI_DO__c</fullName>
        <description>La valoración que el Director de Oficina le da a la RI.</description>
        <label>Valoracion de RI DO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Bueno</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Muy Bueno</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Excelente</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EG_001_ls_Valoracion_de_RI__c</fullName>
        <label>Valoracion de RI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Bueno</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Muy Bueno</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Excelente</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU_001_Un_RI_realizadas__c</fullName>
        <description>Número de reuniones individuales realizadas.</description>
        <label>RI realizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU001_fm_UG_Propietario__c</fullName>
        <description>UG del propietario del registro</description>
        <formula>$User.UG__c</formula>
        <label>UG Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_ft_Fecha_Cierre__c</fullName>
        <description>Fecha y hora de termino de la RI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Finalización</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EU001_ft_Fecha_Inicio__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Fecha y hora de inicio de la RI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Inicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EU001_ls_Tipo_Compromiso__c</fullName>
        <description>Campo tipo de compromiso</description>
        <label>Tipo Compromiso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compromiso Cartera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU001_tl_Comentario_DO__c</fullName>
        <description>El comentario que proporciona el Director de Oficina al momento de valorar la RI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentario DO</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU001_tl_Comentario_EV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentario EV</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU001_tx_Estado__c</fullName>
        <description>Estado en que se encuentra la RI</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preparación</fullName>
                    <default>true</default>
                    <label>Preparación</label>
                </value>
                <value>
                    <fullName>Presentación</fullName>
                </value>
                <value>
                    <fullName>Evaluacion</fullName>
                    <label>Evaluación</label>
                </value>
                <value>
                    <fullName>Finalizacion</fullName>
                    <label>Finalización</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_OwnerEmplNum__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MX_BPP_OwnerEmplNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPyP_Division_RI__c</fullName>
        <description>Este campo fórmula muestra la división del creador de la RI.</description>
        <formula>TEXT( CreatedBy.Divisi_n__c )</formula>
        <label>División de la RI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPyP_Numero_de_empleado_de_la_RI__c</fullName>
        <description>Este campo fórmula muestra el número de empleado propietario de la Reunión Individual</description>
        <formula>Owner:User.EmployeeNumber</formula>
        <label>Número de empleado de la RI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPyP_Oficina_RI__c</fullName>
        <description>Este campo fórmula muestra la oficina del propietario de la Reunión Individual BPyP</description>
        <formula>TEXT( Owner:User.BPyP_ls_NombreSucursal__c )</formula>
        <label>Oficina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_fm_Segmento_del_Ejecutivo__c</fullName>
        <description>Muestra el segmento del ejecutivo</description>
        <formula>TEXT($User.Segmento_Ejecutivo__c)</formula>
        <label>Liga del Ejecutivo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_fm_Mismo_CR__c</fullName>
        <description>bandera para identificar el CR del ejecutivo y del director.</description>
        <formula>$User.CR__c  =  EU001_fm_CR__c</formula>
        <label>Mismo CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU001_fm_Perfil_DO__c</fullName>
        <formula>OR ($Profile.Name = &quot;Director de oficina&quot;,
$Profile.Name = &quot;DIR. OF. EMPRESAS&quot;,
$Profile.Name = &quot;DIR. OF. GOB.&quot;,  
$Profile.Name = &quot;D CORPORATIVO GOBIER&quot;,
$Profile.Name = &quot;D CORPORATIVO EMPRES&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;,
$Profile.Name = &quot;DWP Delegados&quot;,
$Profile.Name = &quot;Administrador Delegado&quot;
)</formula>
        <label>Perfil DO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU001_fm_CR__c</fullName>
        <description>CR del ejecutivo</description>
        <formula>Owner:User.CR__c</formula>
        <label>CR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_fm_Propietario__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <label>Propietario ExUnica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_EU_Actualizacion_del_cintillo__c</fullName>
        <description>Actualiza la fecha de última carga del cintillo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actualización del cintillo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EU001_dv_RealAjustado__c</fullName>
        <label>Real Ajustado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU001_Fechadecomplemento__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de complemento</label>
        <type>Date</type>
    </fields>
    <label>Reunión Individual</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>No RI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reunión Individual</pluralLabel>
    <recordTypes>
        <fullName>MX_BPP_Reu_RI</fullName>
        <active>true</active>
        <label>MX_BPP_Reu_RI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EU001_rv_Estatus</fullName>
        <active>true</active>
        <description>Valida el estatus para Evaluación.</description>
        <errorConditionFormula>IF( 
ISPICKVAL( EU001_tx_Estado__c, &apos;Finalizacion&apos;)  &amp;&amp;   
ISPICKVAL(EG_001_ls_Valoracion_de_RI__c, &apos;&apos;) &amp;&amp; 
ISPICKVAL( EG001_Valoracion_de_RI_DO__c,&apos;&apos; ) ||
ISPICKVAL( EU001_tx_Estado__c, &apos;Finalizacion&apos;) &amp;&amp;
(ISPICKVAL(EG_001_ls_Valoracion_de_RI__c, &apos;&apos;) || ISPICKVAL( EG001_Valoracion_de_RI_DO__c,&apos;&apos; ))
, true, false)</errorConditionFormula>
        <errorMessage>Debe de contar con la evaluación de Ejecutivo y el Director.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU001_rv_cambioEtapa</fullName>
        <active>true</active>
        <description>No se puede cambiar a una etapa anterior</description>
        <errorConditionFormula>OR( 
   AND (ISCHANGED(EU001_tx_Estado__c), 
        OR( ISPICKVAL( EU001_tx_Estado__c , &quot;Presentación&quot;) ,
            ISPICKVAL( EU001_tx_Estado__c , &quot;Preparación&quot;)),
        ISPICKVAL(PRIORVALUE(EU001_tx_Estado__c), &quot;Evaluacion&quot;)
        ),
   AND (ISCHANGED(EU001_tx_Estado__c), 
        OR(ISPICKVAL( EU001_tx_Estado__c , &quot;Presentación&quot;),
           ISPICKVAL( EU001_tx_Estado__c , &quot;Preparación&quot;),
           ISPICKVAL( EU001_tx_Estado__c , &quot;Evaluacion&quot;)),
       ISPICKVAL(PRIORVALUE(EU001_tx_Estado__c), &quot;Finalizacion&quot;)
             )
           )</errorConditionFormula>
        <errorMessage>No puedes cambiar la etapa del RI a una anterior a la actual.</errorMessage>
    </validationRules>
</CustomObject>